refactor: remove follow apis
