# docs/swagger.yaml
@@ -863,162 +863,6 @@ paths:
         401:
           $ref: '#/components/responses/UnauthorizedError'
 
-  /users/follow/{followId}:
-    post:
-      tags:
-        - Users-Follow
-      summary: Follow User
-      description: Add followId user to your following list
-      operationId: users/follow
-      security:
-        - accessToken: [ ]
-      parameters:
-        - name: followId
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        200:
-          description: Ok
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/ResponseCode'
-
-  /users/unfollow/{followId}:
-    delete:
-      tags:
-        - Users-Follow
-      summary: UnFollow User
-      description: Remove followId user from your following list
-      operationId: users/unfollow
-      security:
-        - accessToken: [ ]
-      parameters:
-        - name: followId
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        200:
-          description: Ok
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/ResponseCode'
-
-  /users/followers/{userId}/{page}:
-    get:
-      tags:
-        - Users-Follow
-      summary: Followers
-      description: get user followers
-      operationId: users/followers
-      security:
-        - accessToken: [ ]
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: integer
-        - name: page
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        200:
-          description: Ok
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/ResponseCode'
-                type: array
-                items:
-                  type: object
-                  properties:
-                    userId:
-                      type: integer
-                    username:
-                      type: string
-                    rawUsername:
-                      type: string
-                    publicName:
-                      type: string
-                    bio:
-                      type: string
-                    profileImages:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          url:
-                            type: string
-                          size:
-                            type: integer
-                          thumbnail:
-                            type: string
-
-  /users/followings/{userId}/{page}:
-    get:
-      tags:
-        - Users-Follow
-      summary: Followings
-      description: get user followings
-      operationId: users/followings
-      security:
-        - accessToken: [ ]
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: integer
-        - name: page
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        200:
-          description: Ok
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/ResponseCode'
-                type: array
-                items:
-                  type: object
-                  properties:
-                    userId:
-                      type: integer
-                    username:
-                      type: string
-                    rawUsername:
-                      type: string
-                    publicName:
-                      type: string
-                    bio:
-                      type: string
-                    profileImages:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          url:
-                            type: string
-                          size:
-                            type: integer
-                          thumbnail:
-                            type: string
-
   /users/computeUserStats:
     put:
       tags:
